--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=ads_db
 POSTGRES_PORT=5432
 POSTGRES_HOST=ads_db
+
+SECRET_KEY=secret_key
+
+SQLALCHEMY_DATABASE_URI=postgresql://postgres:postgres@localhost:5432/ads_db
