--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3.9'
 
 services:
+  app:
+    container_name: ads_app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      - ads_db
+
   ads_db:
     image: postgres:15.2
     container_name: ads_db_postgres
