fix env example

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ POSTGRES_HOST=ads_db
 
 SECRET_KEY=secret_key
 
-SQLALCHEMY_DATABASE_URI=postgresql://postgres:postgres@ads_db:5432/ads_db
+SQLALCHEMY_DATABASE_URI=postgresql://postgres:postgres@localhost:5432/ads_db
