--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - .env.example
+      - .env
     depends_on:
       - ads_db
 
@@ -23,7 +23,7 @@ services:
     ports:
       - "5432:5432"
     env_file:
-      - .env.example
+      - .env
 
 
 volumes:
